--- a/tracking.html
+++ b/tracking.html
@@ -1,289 +1,26 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Galloners Club - Tracking</title>
-    <meta charset="UTF-8">
-
-    <style>
-        body {
-            margin:0;
-            font-family:Arial;
-            background:#f4f4f4;
-        }
-
-        header {
-            background:#b30000;
-            color:white;
-            padding:15px;
-            text-align:center;
-        }
-
-        .logo {
-            width:100px;
-            display:block;
-            margin:10px auto;
-        }
-
-        .container {
-            max-width:95%;
-            margin:20px auto;
-            background:white;
-            padding:20px;
-            border-radius:10px;
-            box-shadow:0 3px 10px rgba(0,0,0,0.1);
-        }
-
-        table {
-            width:100%;
-            border-collapse:collapse;
-        }
-
-        th, td {
-            padding:8px;
-            border:1px solid #ddd;
-            text-align:center;
-        }
-
-        th {
-            background:#b30000;
-            color:white;
-        }
-
-        button {
-            padding:5px 8px;
-            margin:2px;
-            border:none;
-            border-radius:4px;
-            cursor:pointer;
-            color:white;
-        }
-
-        .edit-btn { background:#1565c0; }
-        .delete-btn { background:#c62828; }
-        .view-btn { background:#6a1b9a; }
-
-        .top-btn { background:#b30000; }
-
-        .galloner-btn { background:#1e88e5; color:white; }
-        .bronze-btn   { background:#cd7f32; color:white; }
-        .silver-btn   { background:#9e9e9e; color:white; }
-        .gold-btn     { background:#d4af37; color:black; }
-
-        .filter-btn {
-            background:#222;
-            color:white;
-            font-weight:bold;
-        }
-
-    </style>
-</head>
-
-<body>
-
-<header>
-    <img src="images/logo.png" class="logo">
-    <h2>Donor Tracking</h2>
-</header>
-
-<div class="container">
-
-<input type="text" id="searchInput" placeholder="Search donor..."
-onkeyup="searchDonor()" style="margin-bottom:10px; padding:5px;">
-
-<button class="top-btn" onclick="exportToGoogleSheet()">Export CSV</button>
-<button class="top-btn" onclick="goDashboard()">Return to Dashboard</button>
-
-<br><br>
-
-<select id="bloodFilter" onchange="renderTable()">
-    <option value="">All Blood Types</option>
-    <option value="A">A</option>
-    <option value="B">B</option>
-    <option value="AB">AB</option>
-    <option value="O">O</option>
-</select>
-
-<br><br>
-
-<button class="galloner-btn" onclick="filterByCategory('galloner')">Galloners</button>
-<button class="bronze-btn" onclick="filterByCategory('bronze')">Bronze</button>
-<button class="silver-btn" onclick="filterByCategory('silver')">Silver</button>
-<button class="gold-btn" onclick="filterByCategory('gold')">Gold</button>
-<button class="filter-btn" onclick="renderTable()">Show All</button>
-
-<br><br>
-
-<table>
-    <thead>
-        <tr>
-            <th>#</th>
-            <th>Name</th>
-            <th>Blood Type</th>
-            <th>Contact</th>
-            <th>Serial Count</th>
-            <th>Actions</th>
-        </tr>
-    </thead>
-    <tbody id="donorTable"></tbody>
-</table>
-
-</div>
-
 <script>
+window.onload = function(){
 
-function renderTable(category=null){
     let donors = JSON.parse(localStorage.getItem("donors")) || [];
-    let table = document.getElementById("donorTable");
-    let selectedBloodType = document.getElementById("bloodFilter").value;
-    table.innerHTML = "";
+    let editIndex = localStorage.getItem("editIndex");
+    let editSerialIndex = localStorage.getItem("editSerialIndex");
 
-    donors.forEach((donor,index)=>{
-        let serialCount = donor.serials ? donor.serials.length : 0;
+    if(editIndex !== null){
+        let donor = donors[editIndex];
 
-        if(selectedBloodType !== "" && donor.bloodType !== selectedBloodType){
-            return;
+        document.getElementById("firstName").value = donor.firstName || "";
+        document.getElementById("middleName").value = donor.middleName || "";
+        document.getElementById("surname").value = donor.surname || "";
+        document.getElementById("bloodType").value = donor.bloodType || "";
+        document.getElementById("rhFactor").value = donor.rhFactor || "";
+        document.getElementById("birthday").value = donor.birthday || "";
+        document.getElementById("contact").value = donor.contact || "";
+
+        if(editSerialIndex !== null && donor.serials){
+            document.getElementById("serialNumber").value =
+                donor.serials[editSerialIndex].number || "";
         }
-
-        if(category){
-            if(category==="galloner" && serialCount<8) return;
-            if(category==="bronze" && serialCount<28) return;
-            if(category==="silver" && serialCount<46) return;
-            if(category==="gold" && serialCount<70) return;
-        }
-
-        table.innerHTML += `
-        <tr>
-            <td>${index+1}</td>
-            <td>${donor.firstName} ${donor.middleName} ${donor.surname}</td>
-            <td>${donor.bloodType || ""} ${donor.rhFactor || ""}</td>
-            <td>${donor.contact || ""}</td>
-            <td>
-                ${serialCount}
-                <button class="view-btn" onclick="toggleSerial(${index})">View</button>
-            </td>
-            <td>
-                <button class="edit-btn" onclick="editDonor(${index})">Edit</button>
-                <button class="delete-btn" onclick="deleteDonor(${index})">Delete</button>
-            </td>
-        </tr>
-        <tr id="serialRow${index}" style="display:none;">
-            <td colspan="6" id="serialList${index}"></td>
-        </tr>
-        `;
-    });
-}
-
-function toggleSerial(index){
-    let donors = JSON.parse(localStorage.getItem("donors")) || [];
-    let row = document.getElementById("serialRow"+index);
-    let container = document.getElementById("serialList"+index);
-
-    if(row.style.display==="none"){
-        let serials = donors[index].serials || [];
-        container.innerHTML = "";
-
-        if(serials.length===0){
-            container.innerHTML="No serial numbers.";
-        }else{
-            serials.forEach((s,i)=>{
-
-                let fullSerial = "";
-
-                if(typeof s === "object"){
-                    for(let key in s){
-                        fullSerial += s[key] + " ";
-                    }
-                } else {
-                    fullSerial = s;
-                }
-
-                container.innerHTML += `
-                    ${fullSerial}
-                    <button class="edit-btn" onclick="editSerial(${index},${i})">Edit</button>
-                    <button class="delete-btn" onclick="deleteSerial(${index},${i})">Delete</button>
-                    <br><br>
-                `;
-            });
-        }
-
-        row.style.display="table-row";
-    }else{
-        row.style.display="none";
     }
-}
 
-function editDonor(index){
-    localStorage.setItem("editIndex", index);
-    localStorage.removeItem("editSerialIndex");
-    window.location.href="donor-entry.html";
-}
-
-function editSerial(donorIndex, serialIndex){
-    localStorage.setItem("editIndex", donorIndex);
-    localStorage.setItem("editSerialIndex", serialIndex);
-    window.location.href="donor-entry.html";
-}
-
-function deleteSerial(donorIndex, serialIndex){
-    let donors = JSON.parse(localStorage.getItem("donors")) || [];
-    donors[donorIndex].serials.splice(serialIndex,1);
-    localStorage.setItem("donors",JSON.stringify(donors));
-    renderTable();
-}
-
-function deleteDonor(index){
-    let donors = JSON.parse(localStorage.getItem("donors")) || [];
-    donors.splice(index,1);
-    localStorage.setItem("donors",JSON.stringify(donors));
-    renderTable();
-}
-
-function filterByCategory(type){
-    renderTable(type);
-}
-
-function searchDonor(){
-    let input=document.getElementById("searchInput").value.toLowerCase();
-    let rows=document.querySelectorAll("#donorTable tr");
-
-    rows.forEach(row=>{
-        let text=row.innerText.toLowerCase();
-        row.style.display=text.includes(input)?"":"none";
-    });
-}
-
-function goDashboard(){
-    window.location.href="dashboard.html";
-}
-
-function exportToGoogleSheet() {
-    let donors = JSON.parse(localStorage.getItem("donors")) || [];
-
-    let csv = "Blood Type,Rh Factor,First Name,Middle Name,Surname,Birthday,Contact\n";
-
-    donors.forEach(donor => {
-        csv += 
-            (donor.bloodType || "") + "," +
-            (donor.rhFactor || "") + "," +
-            (donor.firstName || "") + "," +
-            (donor.middleName || "") + "," +
-            (donor.surname || "") + "," +
-            (donor.birthday || "") + "," +
-            (donor.contact || "") + "\n";
-    });
-
-    let blob = new Blob([csv], { type: "text/csv" });
-    let url = window.URL.createObjectURL(blob);
-    let a = document.createElement("a");
-    a.href = url;
-    a.download = "donors.csv";
-    a.click();
-    window.URL.revokeObjectURL(url);
-}
-
-renderTable();
-
+};
 </script>
-
-</body>
-</html>
