--- a/tracking.html
+++ b/tracking.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -63,7 +62,6 @@
         .delete-btn { background:#c62828; }
         .view-btn { background:#6a1b9a; }
 
-        /* MATCHED RED HEADER COLOR */
         .top-btn { background:#b30000; }
 
         .galloner-btn { background:#1e88e5; color:white; }
@@ -188,8 +186,19 @@ function toggleSerial(index){
             container.innerHTML="No serial numbers.";
         }else{
             serials.forEach((s,i)=>{
+
+                let fullSerial = "";
+
+                if(typeof s === "object"){
+                    for(let key in s){
+                        fullSerial += s[key] + " ";
+                    }
+                } else {
+                    fullSerial = s;
+                }
+
                 container.innerHTML += `
-                    Serial: ${s.number || ""}
+                    ${fullSerial}
                     <button class="edit-btn" onclick="editSerial(${index},${i})">Edit</button>
                     <button class="delete-btn" onclick="deleteSerial(${index},${i})">Delete</button>
                     <br><br>
@@ -205,7 +214,7 @@ function toggleSerial(index){
 
 function editDonor(index){
     localStorage.setItem("editIndex", index);
-    localStorage.removeItem("editSerialIndex"); // FIX repopulate conflict
+    localStorage.removeItem("editSerialIndex");
     window.location.href="donor-entry.html";
 }
 
