--- a/tracking.html
+++ b/tracking.html
@@ -5,76 +5,23 @@
     <meta charset="UTF-8">
 
     <style>
-        body {
-            margin:0;
-            font-family:Arial;
-            background:#f4f4f4;
-        }
-
-        header {
-            background:#b30000;
-            color:white;
-            padding:15px;
-            text-align:center;
-        }
-
-        .logo {
-            width:100px;
-            display:block;
-            margin:10px auto;
-        }
-
-        .container {
-            max-width:95%;
-            margin:20px auto;
-            background:white;
-            padding:20px;
-            border-radius:10px;
-            box-shadow:0 3px 10px rgba(0,0,0,0.1);
-        }
-
-        table {
-            width:100%;
-            border-collapse:collapse;
-        }
-
-        th, td {
-            padding:8px;
-            border:1px solid #ddd;
-            text-align:center;
-        }
-
-        th {
-            background:#b30000;
-            color:white;
-        }
-
-        button {
-            padding:5px 8px;
-            margin:2px;
-            border:none;
-            border-radius:4px;
-            cursor:pointer;
-            color:white;
-        }
-
+        body { margin:0; font-family:Arial; background:#f4f4f4; }
+        header { background:#b30000; color:white; padding:15px; text-align:center; }
+        .logo { width:100px; display:block; margin:10px auto; }
+        .container { max-width:95%; margin:20px auto; background:white; padding:20px; border-radius:10px; box-shadow:0 3px 10px rgba(0,0,0,0.1); }
+        table { width:100%; border-collapse:collapse; }
+        th, td { padding:8px; border:1px solid #ddd; text-align:center; }
+        th { background:#b30000; color:white; }
+        button { padding:5px 8px; margin:2px; border:none; border-radius:4px; cursor:pointer; color:white; }
         .edit-btn { background:#1565c0; }
         .delete-btn { background:#c62828; }
         .view-btn { background:#6a1b9a; }
-
         .top-btn { background:#b30000; }
-
         .galloner-btn { background:#1e88e5; color:white; }
-        .bronze-btn   { background:#cd7f32; color:white; }
-        .silver-btn   { background:#9e9e9e; color:white; }
-        .gold-btn     { background:#d4af37; color:black; }
-
-        .filter-btn {
-            background:#222;
-            color:white;
-            font-weight:bold;
-        }
-
+        .bronze-btn { background:#cd7f32; color:white; }
+        .silver-btn { background:#9e9e9e; color:white; }
+        .gold-btn { background:#d4af37; color:black; }
+        .filter-btn { background:#222; color:white; font-weight:bold; }
     </style>
 </head>
 
@@ -114,17 +61,17 @@ onkeyup="searchDonor()" style="margin-bottom:10px; padding:5px;">
 <br><br>
 
 <table>
-    <thead>
-        <tr>
-            <th>#</th>
-            <th>Name</th>
-            <th>Blood Type</th>
-            <th>Contact</th>
-            <th>Serial Count</th>
-            <th>Actions</th>
-        </tr>
-    </thead>
-    <tbody id="donorTable"></tbody>
+<thead>
+<tr>
+<th>#</th>
+<th>Name</th>
+<th>Blood Type</th>
+<th>Contact</th>
+<th>Serial Count</th>
+<th>Actions</th>
+</tr>
+</thead>
+<tbody id="donorTable"></tbody>
 </table>
 
 </div>
@@ -140,9 +87,7 @@ function renderTable(category=null){
     donors.forEach((donor,index)=>{
         let serialCount = donor.serials ? donor.serials.length : 0;
 
-        if(selectedBloodType !== "" && donor.bloodType !== selectedBloodType){
-            return;
-        }
+        if(selectedBloodType !== "" && donor.bloodType !== selectedBloodType) return;
 
         if(category){
             if(category==="galloner" && serialCount<8) return;
@@ -187,21 +132,16 @@ function toggleSerial(index){
         }else{
             serials.forEach((s,i)=>{
 
-                let fullSerial = "";
-
-                if(typeof s === "object"){
-                    for(let key in s){
-                        fullSerial += s[key] + " ";
-                    }
-                } else {
-                    fullSerial = s;
-                }
+                let serialValue = s.number || "";
+                let dateValue = s.date || "";
 
                 container.innerHTML += `
-                    ${fullSerial}
-                    <button class="edit-btn" onclick="editSerial(${index},${i})">Edit</button>
-                    <button class="delete-btn" onclick="deleteSerial(${index},${i})">Delete</button>
-                    <br><br>
+                    <div id="serialDisplay${index}_${i}">
+                        Serial: ${serialValue} | Date: ${dateValue}
+                        <button class="edit-btn" onclick="editSerial(${index},${i})">Edit</button>
+                        <button class="delete-btn" onclick="deleteSerial(${index},${i})">Delete</button>
+                    </div>
+                    <br>
                 `;
             });
         }
@@ -212,15 +152,40 @@ function toggleSerial(index){
     }
 }
 
+/* UPDATED — INLINE EDIT */
+function editSerial(donorIndex, serialIndex){
+    let donors = JSON.parse(localStorage.getItem("donors")) || [];
+    let serial = donors[donorIndex].serials[serialIndex];
+
+    let container = document.getElementById(`serialDisplay${donorIndex}_${serialIndex}`);
+
+    container.innerHTML = `
+        <input type="text" id="editSerialInput${donorIndex}_${serialIndex}" value="${serial.number || ""}">
+        <input type="date" id="editDateInput${donorIndex}_${serialIndex}" value="${serial.date || ""}">
+        <button class="edit-btn" onclick="saveSerialEdit(${donorIndex},${serialIndex})">Save</button>
+        <button class="delete-btn" onclick="toggleSerial(${donorIndex})">Cancel</button>
+    `;
+}
+
+function saveSerialEdit(donorIndex, serialIndex){
+    let donors = JSON.parse(localStorage.getItem("donors")) || [];
+
+    let newSerial = document.getElementById(`editSerialInput${donorIndex}_${serialIndex}`).value;
+    let newDate = document.getElementById(`editDateInput${donorIndex}_${serialIndex}`).value;
+
+    donors[donorIndex].serials[serialIndex] = {
+        number: newSerial,
+        date: newDate
+    };
+
+    localStorage.setItem("donors", JSON.stringify(donors));
+    toggleSerial(donorIndex);
+    toggleSerial(donorIndex);
+}
+
 function editDonor(index){
     localStorage.setItem("editIndex", index);
     localStorage.removeItem("editSerialIndex");
-    window.location.href="donor-entry.html";
-}
-
-function editSerial(donorIndex, serialIndex){
-    localStorage.setItem("editIndex", donorIndex);
-    localStorage.setItem("editSerialIndex", serialIndex);
     window.location.href="donor-entry.html";
 }
 
@@ -238,27 +203,21 @@ function deleteDonor(index){
     renderTable();
 }
 
-function filterByCategory(type){
-    renderTable(type);
-}
+function filterByCategory(type){ renderTable(type); }
 
 function searchDonor(){
     let input=document.getElementById("searchInput").value.toLowerCase();
     let rows=document.querySelectorAll("#donorTable tr");
-
     rows.forEach(row=>{
         let text=row.innerText.toLowerCase();
         row.style.display=text.includes(input)?"":"none";
     });
 }
 
-function goDashboard(){
-    window.location.href="dashboard.html";
-}
+function goDashboard(){ window.location.href="dashboard.html"; }
 
 function exportToGoogleSheet() {
     let donors = JSON.parse(localStorage.getItem("donors")) || [];
-
     let csv = "Blood Type,Rh Factor,First Name,Middle Name,Surname,Birthday,Contact\n";
 
     donors.forEach(donor => {
