--- a/donor-entry.html
+++ b/donor-entry.html
@@ -3,14 +3,17 @@
 <head>
     <title>Galloners Club - Donor Entry</title>
     <meta charset="UTF-8">
+
     <style>
-        body { font-family: Arial; background:#f4f4f4; margin:0; }
+        body { margin:0; font-family:Arial; background:#f4f4f4; }
         header { background:#b30000; color:white; padding:15px; text-align:center; }
         .container { max-width:500px; margin:20px auto; background:white; padding:20px; border-radius:10px; box-shadow:0 3px 10px rgba(0,0,0,0.1); }
         input, select { width:100%; padding:8px; margin-bottom:10px; }
-        button { padding:10px; width:100%; background:#b30000; color:white; border:none; border-radius:5px; cursor:pointer; }
+        button { padding:8px; margin-top:5px; background:#b30000; color:white; border:none; border-radius:5px; cursor:pointer; }
+        .serial-box { margin-top:10px; }
     </style>
 </head>
+
 <body>
 
 <header>
@@ -40,16 +43,65 @@
 <input type="date" id="birthday">
 <input type="text" id="contact" placeholder="Contact Number">
 
+<hr>
+
+<h3>Serial Records</h3>
+
+<input type="text" id="serialInput" placeholder="Serial Number">
+<input type="date" id="dateInput">
+<button onclick="addSerial()">Add Serial</button>
+
+<div id="serialList" class="serial-box"></div>
+
+<hr>
+
 <button onclick="saveDonor()">Save Donor</button>
 
 </div>
 
 <script>
 
+let serials = [];
+
+function addSerial(){
+    let serial = document.getElementById("serialInput").value;
+    let date = document.getElementById("dateInput").value;
+
+    if(serial === "" || date === ""){
+        alert("Enter serial number and date.");
+        return;
+    }
+
+    serials.push({ serial: serial, date: date });
+
+    document.getElementById("serialInput").value = "";
+    document.getElementById("dateInput").value = "";
+
+    renderSerials();
+}
+
+function renderSerials(){
+    let container = document.getElementById("serialList");
+    container.innerHTML = "";
+
+    serials.forEach((s,i)=>{
+        container.innerHTML += `
+            <div>
+                ${s.serial} - ${s.date}
+                <button onclick="removeSerial(${i})">Remove</button>
+            </div>
+        `;
+    });
+}
+
+function removeSerial(index){
+    serials.splice(index,1);
+    renderSerials();
+}
+
 function saveDonor(){
 
     let donors = JSON.parse(localStorage.getItem("donors")) || [];
-
     let editIndex = localStorage.getItem("editIndex");
 
     let donorData = {
@@ -60,11 +112,10 @@ function saveDonor(){
         rhFactor: document.getElementById("rhFactor").value,
         birthday: document.getElementById("birthday").value,
         contact: document.getElementById("contact").value,
-        serials: []
+        serials: serials
     };
 
     if(editIndex !== null){
-        donorData.serials = donors[editIndex].serials || [];
         donors[editIndex] = donorData;
         localStorage.removeItem("editIndex");
     } else {
@@ -74,6 +125,25 @@ function saveDonor(){
     localStorage.setItem("donors", JSON.stringify(donors));
 
     window.location.href = "tracking.html";
+}
+
+window.onload = function(){
+    let editIndex = localStorage.getItem("editIndex");
+    if(editIndex !== null){
+        let donors = JSON.parse(localStorage.getItem("donors")) || [];
+        let donor = donors[editIndex];
+
+        document.getElementById("firstName").value = donor.firstName;
+        document.getElementById("middleName").value = donor.middleName;
+        document.getElementById("surname").value = donor.surname;
+        document.getElementById("bloodType").value = donor.bloodType;
+        document.getElementById("rhFactor").value = donor.rhFactor;
+        document.getElementById("birthday").value = donor.birthday;
+        document.getElementById("contact").value = donor.contact;
+
+        serials = donor.serials || [];
+        renderSerials();
+    }
 }
 
 </script>
